compiler/src/test/resources/golden/errors/exh_missing_bool.dawn
fn f(b: Bool) -> Int =
  match b {
    true -> 1
  }
