compiler/src/test/resources/golden/errors/exh_missing_bool.err
error: non-exhaustive match, missing: false
  --> exh_missing_bool.dawn:2:3
  |
2 |   match b {
  |   ^^^^^^^^^
  = hint: add an unguarded catch-all arm (a binding or _)
